fixes and docker
