# src/routes/characters.go
@@ -2,6 +2,8 @@ package routes
 
 import (
 	"net/http"
+	"strconv"
+	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/tadeasf/eve-ran/src/db"
@@ -41,4 +43,59 @@ func GetAllKills(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, kills)
+}
+
+// GetAllCharacterStats retrieves stats for all characters with filters
+// @Summary Get all character stats
+// @Description Fetch stats for all characters from the database with optional filters
+// @Tags characters
+// @Accept json
+// @Produce json
+// @Param regionID query []int false "Region IDs"
+// @Param startDate query string false "Start date (YYYY-MM-DD)"
+// @Param endDate query string false "End date (YYYY-MM-DD)"
+// @Success 200 {array} db.CharacterStats
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Router /characters/stats [get]
+func GetAllCharacterStats(c *gin.Context) {
+	regionIDs := c.QueryArray("regionID")
+	startDate := c.Query("startDate")
+	endDate := c.Query("endDate")
+
+	// Convert regionIDs from string to int
+	var regionIDInts []int64
+	for _, id := range regionIDs {
+		intID, err := strconv.ParseInt(id, 10, 64)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid region ID"})
+			return
+		}
+		regionIDInts = append(regionIDInts, intID)
+	}
+
+	// Parse dates
+	var startTime, endTime time.Time
+	var err error
+	if startDate != "" {
+		startTime, err = time.Parse("2006-01-02", startDate)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid start date format"})
+			return
+		}
+	}
+	if endDate != "" {
+		endTime, err = time.Parse("2006-01-02", endDate)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid end date format"})
+			return
+		}
+	}
+
+	stats, err := db.GetCharacterStats(startTime, endTime, 0, regionIDInts...)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, stats)
 }
