# src/routes/getKills.go
@@ -24,18 +24,3 @@ func GetCharacterKillmails(c *gin.Context) {
 
 	c.JSON(http.StatusOK, kills)
 }
-
-func GetAllCharacterStats(c *gin.Context) {
-	startTime, _ := time.Parse(time.RFC3339, c.Query("start_time"))
-	endTime, _ := time.Parse(time.RFC3339, c.Query("end_time"))
-	systemID, _ := strconv.ParseInt(c.Query("system_id"), 10, 64)
-	regionID, _ := strconv.ParseInt(c.Query("region_id"), 10, 64)
-
-	stats, err := db.GetCharacterStats(startTime, endTime, systemID, regionID)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, stats)
-}
